# dtu_mlops

./: .gcloudignore  .gitignore  requirements.txt
.dvc/: config
dummy_project/: Dockerfile  cloudbuild.yaml
my_project/: .gcloudignore  .gitignore  LICENSE  README.md  cloudbuild_backend.yaml  cloudbuild_containers.yaml  cloudbuild_datadrift.yaml  cloudbuild_frontend.yaml  data.dvc  google_storage_key.py  index.html  pyproject.toml  pyproject_api.toml  requirements.txt  requirements_api.txt  requirements_backend.txt  tasks.py
my_project/.github/workflows/: codecheck.yaml
my_project/configs/: config.yaml  sweep.yaml  vae_config.yaml
my_project/dockerfiles/: api.dockerfile  app_monitoring.dockerfile  backend.dockerfile  frontend.dockerfile  train.dockerfile  trainer.dockerfile  wandb.dockerfile
my_project/docs/: index.html  mkdocs.yaml
my_project/docs/source/: index.html
my_project/integrationtest/: test_apis.py
my_project/integrationtests/: test_apis.py
my_project/models/: model.onnx
my_project/performancetests/: test_model.py
my_project/src/my_project/: MNIST_dataset.py  api.py  app_monitoring.py  backend.py  bentoml_service.py  data.py  data_drift.py  dataset_statistics.py  evaluate.py  frontend.py  image_analysis.py  iris_classifier.py  iris_fastapi.py  link_model.py  main.py  model.py  my_logger.py  train.py  train_lightening.py  vae_mnist.py  vae_mnist_bugs.py  visualize.py  wandb_tester.py
my_project/tests/: test_data.py  test_model.py
my_project/tests/performancetests/: test_model.py
search/: search_index.json
(+14 files in other folders)
