[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
  "setuptools-scm",
]

[project]
name = "my-project"
version = "0.0.1"
description = "bla"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "osquera", email = "antonmosquerastorgaard@gmail.com" },
]
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
]
dynamic = [
  "dependencies",
  "optional-dependencies",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
select = ["I"]
line-length = 120

[tool.coverage.run]
omit = ["tests/*"]
